tests/ui/async-await/in-trait/return-type-suggestion.rs
// edition: 2021

#![feature(async_fn_in_trait)]

trait A {
    async fn e() {
        Ok(())
        //~^ ERROR mismatched types
        //~| HELP consider using a semicolon here
    }
}

fn main() {}
